--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+body{
+    background-color: rgb(43, 41, 41);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+h1{
+    color: white;
 }
+
+span{
+    font-size: 2em;
+    color: white;
+    font-family: "Helvetica Neue", monospace;
+
+}
+
+.timer {
+text-align: center;
+display: block;
+}
+
+.Menu-button {
+    margin-top: 20px;
+    text-align: center;
+    display: block;
+}
+
+.Menu-button button {
+    padding: 0.5em;
+    margin: 0 0.5em;
+    min-width: 80px;
+}
+
+    
+
